@@ -15,6 +15,7 @@ are the preloadFunction and transformFunction params, which should now go in an
 options object within the dataset object.
 - Added loaders for JSON strings, Google Spreadsheets, and Flickr
 - Added polyline and polygon support to GeoRSS
+- Added support for multiple geometries in KML
 
 Version 1.4
 -----------
